fixed- Contributor feedback is bleeding off the page on the revisions tab in DEV

--- a/docroot/sites/all/modules/custom/sbac_content_types/sbac_resource/sass/sbac_resource.scss
+++ b/docroot/sites/all/modules/custom/sbac_content_types/sbac_resource/sass/sbac_resource.scss
@@ -2531,6 +2531,10 @@ a.more-less-text-trigger-less:after {
 				width: 560px;
 			}
 
+			.comments-content {
+				width: auto !important;
+			}
+			
 			.criteria-set-title-contributor {
 				font-size: 13px;
 			  font-weight: bold;
